--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api-server",
   "version": "1.0.0",
+  "node": "v10.16.3",
   "description": "",
   "main": "index.js",
   "scripts": {
