--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "api-server",
   "version": "1.0.0",
-  "node": "v10.16.3",
+  "engines": {
+  "node": "v10.16.3"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
