--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-server",
   "version": "1.0.0",
   "engines": {
-  "node": "v10.16.3"
+    "node": "v10.16.3"
   },
   "description": "",
   "main": "index.js",
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   }
 }
