--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-server",
   "version": "1.0.0",
   "engines": {
-    "node": "v10.16.3"
+    "node": "v10.x"
   },
   "description": "",
   "main": "index.js",
